# bird-client

./: CMakeLists.txt  main  main.c
src/: bird_client.c  bird_client.h  bird_server_reply_codes.h  strutils.c  strutils.h
src/data_structures/: bird_data_structures.h  vector.c  vector.h
